// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders button with children 1`] = `
.c0 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  background-color: #1648ff;
  color: #fff;
  fill: #1648ff;
  border: 2px solid transparent;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 0.875rem;
  padding: 6px 8px;
}

.c0:focus:not {
  outline: 0;
}

.c0:hover {
  background-color: #1236bb;
  color: #fff;
}

.c0:active {
  background-color: transparent;
  color: #1648ff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0>* {
  stroke: #1648ff;
  fill: #fff;
}

<button
  class="c0"
  color="rgba(0, 0, 0, .2)"
  type="button"
>
  Click me
</button>
`;

exports[`Button renders icons 1`] = `
.c0 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  background-color: #1648ff;
  color: #fff;
  fill: #1648ff;
  border: 2px solid transparent;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 0.875rem;
  padding: 6px 8px;
}

.c0:focus:not {
  outline: 0;
}

.c0:hover {
  background-color: #1236bb;
  color: #fff;
}

.c0:active {
  background-color: transparent;
  color: #1648ff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0>* {
  stroke: #1648ff;
  fill: #fff;
}

<button
  class="c0"
  color="rgba(0, 0, 0, .2)"
  type="button"
>
  <div>
    Icon
  </div>
</button>
`;

exports[`Button renders sizes correctly 1`] = `
.c0 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  background-color: #1648ff;
  color: #fff;
  fill: #1648ff;
  border: 2px solid transparent;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 0.9375rem;
  padding: 10px 13px;
}

.c0:focus:not {
  outline: 0;
}

.c0:hover {
  background-color: #1236bb;
  color: #fff;
}

.c0:active {
  background-color: transparent;
  color: #1648ff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0>* {
  stroke: #1648ff;
  fill: #fff;
}

<button
  class="c0"
  color="rgba(0, 0, 0, .2)"
  type="button"
>
  lg
</button>
`;

exports[`Button renders sizes correctly 2`] = `
.c0 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  background-color: #1648ff;
  color: #fff;
  fill: #1648ff;
  border: 2px solid transparent;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 0.875rem;
  padding: 6px 8px;
}

.c0:focus:not {
  outline: 0;
}

.c0:hover {
  background-color: #1236bb;
  color: #fff;
}

.c0:active {
  background-color: transparent;
  color: #1648ff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0>* {
  stroke: #1648ff;
  fill: #fff;
}

<button
  class="c0"
  color="rgba(0, 0, 0, .2)"
  type="button"
>
  md
</button>
`;

exports[`Button renders sizes correctly 3`] = `
.c0 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  background-color: #1648ff;
  color: #fff;
  fill: #1648ff;
  border: 2px solid transparent;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 0.8125rem;
  padding: 4px 6px;
}

.c0:focus:not {
  outline: 0;
}

.c0:hover {
  background-color: #1236bb;
  color: #fff;
}

.c0:active {
  background-color: transparent;
  color: #1648ff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0>* {
  stroke: #1648ff;
  fill: #fff;
}

<button
  class="c0"
  color="rgba(0, 0, 0, .2)"
  type="button"
>
  sm
</button>
`;

exports[`Button renders sizes correctly 4`] = `
.c0 {
  align-items: center;
  border-radius: 3px;
  border: none;
  box-shadow: none;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  font-weight: 500;
  justify-content: center;
  line-height: 1.75;
  text-decoration: none;
  transition: color 0.2s ease,background-color 0.2s ease,box-shadow 0.2s ease,border-color 0.2s ease,filter 0.2s ease;
  user-select: none;
  background-color: #1648ff;
  color: #fff;
  fill: #1648ff;
  border: 2px solid transparent;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 0.6875rem;
  padding: 2px 4px;
}

.c0:focus:not {
  outline: 0;
}

.c0:hover {
  background-color: #1236bb;
  color: #fff;
}

.c0:active {
  background-color: transparent;
  color: #1648ff;
  box-shadow: 0px 4px 8px #181a1b33;
}

.c0>* {
  stroke: #1648ff;
  fill: #fff;
}

<button
  class="c0"
  color="rgba(0, 0, 0, .2)"
  type="button"
>
  xs
</button>
`;
